--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#20d73f",
-    "activityBar.background": "#20d73f",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#7159e6",
+    "activityBar.activeBackground": "#256c4d",
+    "activityBar.background": "#256c4d",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#44215f",
     "activityBarBadge.foreground": "#e7e7e7",
     "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#20d73f",
-    "statusBar.background": "#19ab32",
-    "statusBar.debuggingBackground": "#ab1992",
-    "statusBar.debuggingForeground": "#e7e7e7",
+    "sash.hoverBorder": "#256c4d",
+    "statusBar.background": "#184632",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#20d73f",
-    "statusBarItem.remoteBackground": "#19ab32",
+    "statusBarItem.hoverBackground": "#256c4d",
+    "statusBarItem.remoteBackground": "#184632",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#19ab32",
+    "titleBar.activeBackground": "#184632",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#19ab3299",
+    "titleBar.inactiveBackground": "#18463299",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#19ab32"
+  "peacock.color": "#184632"
 }
